# rustARI

./: .gitignore  README.md
.github/workflows/: rust.yml
rustARI/: Cargo.toml
rustARI/src/: main.rs  mem_load.rs
rust_ari/: Cargo.toml
rust_ari/src/: atari.rs  main.rs  rom_read.rs  snips
