[package]
name = "rustARI"
version = "0.1.0"
authors = ["Rasengangstarr <davidouthere@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]


[dependencies]
strum = "0.18.0"
strum_macros = "0.18.0"

env_logger = "0.7.1"
log = "0.4.8"

pixels = "0.1.0"

winit = "0.22.0"
winit_input_helper = "0.6.0"
